--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ gen/
 .gradle/
 build/
 /*/build/
-*.iml
+
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -25,3 +25,13 @@ proguard/
 
 # Log Files
 *.log
+
+# IDEA IDE
+.idea/
+*.iml
+
+#Windows
+Thumbs.db
+
+#MAC
+.DS_Store
