--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AppcanPluginDemo3.0</name>
+	<name>uexBaiduNavi</name>
 	<comment></comment>
 	<projects>
 	</projects>
