--- a/uexBaiduNavi/AndroidManifest.xml
+++ b/uexBaiduNavi/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <!-- 增加百度LBS密钥，将下面的key值修改为在LBS开放平台申请的AK -->
     <meta-data
         android:name="com.baidu.lbsapi.API_KEY"
-        android:value="$uexBaiduMap_APIKey$" />
+        android:value="$uexBaiduNavi_ApiKey$" />
 
     <!-- 定位用的service -->
     <service
